--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 
 /*----------------------------Colours */
 .bg-color-name-title {
-    background-color: #676767;
+  background-color: #676767;
 }
 header {
   margin: 0;
@@ -22,7 +22,7 @@ header {
 /*----------------------------Heading */
 
 .heading {
-    margin-left: 50px;
+  margin-left: 50px;
 }
 
 .logo {
@@ -36,19 +36,19 @@ header {
   -webkit-transition: all 0.5s ease-in-out;
 }
 .name {
-    font-family: "Exo", sans-serif;
-    font-weight: 100;
-    font-size: 46px;
-    margin-top: 50px;
-    color: #fff;
+  font-family: "Exo", sans-serif;
+  font-weight: 100;
+  font-size: 46px;
+  margin-top: 50px;
+  color: #fff;
 }
 .title {
-    font-family: "Roboto", sans-serif;
-    font-weight: 200;
-    font-size: 28px;
-    margin-top: 20px;
-    margin-bottom: 90px;
-    color: #fff;
+  font-family: "Roboto", sans-serif;
+  font-weight: 200;
+  font-size: 28px;
+  margin-top: 20px;
+  margin-bottom: 90px;
+  color: #fff;
 }
 .list-inline-item:not(:last-child) {
   margin: 0;
@@ -77,4 +77,14 @@ header {
   display: block;
   color: #fafafa;
   font-size: 26px;
+}
+.menuitem span {
+  display: block;
+  width: 100%;
+  padding-top: 5px;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 300;
+  letter-spacing: 2px;
 }
