--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,9 @@ h4 {
   font-weight: 300;
   color: #fafafa;
 }
+.inline-block {
+  display: inline-block;
+}
 
 /*----------------------------Heading */
 
@@ -110,7 +113,6 @@ h4 {
 /*----------------------------Hover.css */
 .hvr-sweep-to-bottom:before {
   background: rgba(0, 0, 0, 0.2);
-
   height: 120px;
 }
 /*----------------------------Footer */
