--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,9 +84,9 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 360px;
-  transition: all .5s ease-in-out;
-  -moz-transition: all .5s ease-in-out;
-  -webkit-transition: all .5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
 }
 
 .name {
@@ -255,4 +255,26 @@ footer {
 .personal-info-item .value {
   position: relative;
   width: 60%;
+}
+
+/*----------------------------Skills */
+
+.progress {
+  position: relative;
+  height: 25px;
+  margin-bottom: 4px;
+}
+
+.progress-type {
+  position: absolute;
+  left: 0px;
+  font-weight: 400;
+  height: 25px;
+  padding: 12px 30px 2px 10px;
+  color: #fafafa;
+  background-color: rgba(25, 25, 25, 0.2);
+}
+
+.progress-section {
+  margin: 40px 20px;
 }
